WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52933
fix audio build: header file should be "Noncopyable.h" and not "NonCopyable.h"
https://bugs.webkit.org/show_bug.cgi?id=52933
Summary
fix audio build: header file should be "Noncopyable.h" and not "NonCopyable.h"
Chris Rogers
Reported
2011-01-21 15:32:11 PST
fix audio build: header file should be "Noncopyable.h" and not "NonCopyable.h"
Attachments
Patch
(1.03 KB, patch)
2011-01-21 15:33 PST
,
Chris Rogers
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2011-01-21 15:33:24 PST
Created
attachment 79803
[details]
Patch
Kenneth Russell
Comment 2
2011-01-21 15:34:49 PST
Comment on
attachment 79803
[details]
Patch OK.
Chris Rogers
Comment 3
2011-01-21 15:41:34 PST
Committed
r76402
: <
http://trac.webkit.org/changeset/76402
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug